# fluid-sim

./: .gitignore  README.md  pyproject.toml
docs/: book.toml
docs/src/: SUMMARY.md  architecture-backends.md  architecture-layering.md  architecture-modules.md  architecture-overview.md  cfd-boundary-conditions.md  cfd-engine.md  extending.md  getting-started-install.md  getting-started-running.md  introduction.md  license.md  math-advection.md  math-boundary-conditions.md  math-diffusion.md  math-dissipation.md  math-navier-stokes.md  math-obstacles.md  math-projection.md  math-stable-fluids.md  reference-configuration.md  reference-performance.md  reference-testing.md  scenes.md  usage-controls.md  video.md  visualization.md
examples/: custom_scene.py  headless_demo.py  render_video.py
src/fluidsim/: __init__.py  __main__.py  cli.py  cli_render.py  config.py  recording.py
src/fluidsim/app/: __init__.py  app.py  loop.py  pygame_backend.py
src/fluidsim/core/: __init__.py  _numba_kernels.py  boundary.py  factory.py  fields.py  grid.py  numba_solver.py  numpy_solver.py  solver_base.py
src/fluidsim/interaction/: __init__.py  brush.py  commands.py  input_map.py
src/fluidsim/render/: __init__.py  colormap.py  colormaps.py  overlay.py  renderer.py  visualize.py
src/fluidsim/scenes/: __init__.py  library.py  scene.py  shapes.py  sources.py
tests/: conftest.py  test_advection.py  test_boundary.py  test_boundary_conditions.py  test_config.py  test_interaction.py  test_layering.py  test_projection.py  test_recording.py  test_render.py  test_scenes.py  test_shapes.py  test_solver_parity.py  test_visualize.py
