[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluidsim"
version = "0.2.0"
description = "Interactive 2D Stable-Fluids CFD engine with a pygame UI and offline video rendering"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "fluid-sim contributors" }]
keywords = ["fluid", "simulation", "navier-stokes", "stable-fluids", "pygame"]

dependencies = [
    "numpy>=2.0",
    "pygame-ce>=2.4",
]

[project.optional-dependencies]
# Optional JIT accelerator. The app runs fine without it (falls back to NumPy).
numba = ["numba>=0.60"]
# Offline high-quality video rendering (MP4 via bundled ffmpeg). PNG-sequence
# output also uses imageio.
video = ["imageio>=2.31", "imageio-ffmpeg>=0.4"]
# Development / testing tooling.
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy"]

[project.scripts]
fluidsim = "fluidsim.cli:main"
fluidsim-render = "fluidsim.cli_render:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fluidsim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
